# digg

./: .travis.yml  AGENTS.md  AUTHORS.rst  BUG_HUNT_RESEARCH.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  Cargo.toml  Justfile  LICENSE  Makefile  README.md  README.rst  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.claude/skills/backlog/: SKILL.md
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  fuzz.yml  release-please.yml  release.yml
completions/: _digg  digg.bash  digg.fish
digg/: __init__.py  cli.py  digg.py
docs/: .gitignore  Makefile  conf.py  digg.1  index.rst  installation.rst  make.bat  usage.rst
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_name.rs  decode_record.rs  parse_message.rs
scripts/: completions-check.sh  man-check.sh  update-homebrew-cask.sh
src/: axfr.rs  batch.rs  bench.rs  cli.rs  compare.rs  dnssec.rs  doh.rs  dot.rs  error.rs  fuzz_tests.rs  idn.rs  lib.rs  main.rs  output.rs  propagation.rs  resolver.rs  trace.rs  transport.rs  watch.rs
src/protocol/: edns.rs  header.rs  message.rs  mod.rs  name.rs  question.rs  record.rs  types.rs
tests/: __init__.py  config_file.rs  test_digg.py  transport_mock.rs
