[package]
name = "digg-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.digg]
path = ".."

[[bin]]
name = "parse_message"
path = "fuzz_targets/parse_message.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_name"
path = "fuzz_targets/decode_name.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_record"
path = "fuzz_targets/decode_record.rs"
test = false
doc = false
bench = false
